[tool.poetry]
name = "django-bunny"
version = "1.1.1"
description = "A django storage for bunny.net"
authors = ["Neki <neki@nekidev.com>"]
maintainers = ["Neki <neki@nekidev.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_bunny"}]
homepage = "https://github.com/Nekidev/django-bunny/"
repository = "https://github.com/Nekidev/django-bunny/"
documentation = "https://github.com/Nekidev/django-bunny/tree/main/README.md"
keywords = ["django", "bunnycdn", "django-storage"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Django = ">=3.0.0"
requests = "^2.30.0"
python-dateutil = "^2.8.2"


[[tool.poetry.source]]
name = "GitHub"
url = "https://github.com/Nekidev/django-bunny/"
default = true
secondary = false


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
